--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^2.24.79",
+    "gatsby-source-contentful": "^3.0.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
